# routes/categoryRoutes.js
@@ -4,9 +4,11 @@ const router = express.Router();
 const {
   getAllCategories,
   updateCategory,
+  deleteCategory,
 } = require("../controllers/CategoryController");
 
 router.get("/allCategories", getAllCategories);
 router.post("/updateCategory", updateCategory);
+router.delete("/deleteCategory", deleteCategory);
 
 module.exports = router;
